0032975: Visualization, TKOpenGl - do not blit inactive Subview